# Change Log
All notable changes to this project will be documented in this file.

## [1.32] 2021-14-02

### Added
  - ListObject#[] with options, position
  - ListRow#to_h, to_a, values=, keys_values

## [1.31] 2021-14-01

### Added
  - Worksheet#table

## [1.30] 2020-18-11

## [1.29] 2020-05-11

### Added
  - Workbook.open can also take a Pathname object
  - General#init_reo_for_win32ole

## [1.28] 2020-23-10

## [1.27] 2020-16-10

## [1.26] 2020-09-10

### Added
  - General#change_current_binding

## [1.25] 2020-10-09]

## [1.24] 2020-25-09

## [1.23] 2020-02-09

## [1.22] 2020-10-08

### Added
  - Range#set_value

## [1.21] 2020-05-08
  
### Added
  - Range#rows, columns

## [1.20] 2020-23-07

### Changed
  - using pry in console

### Added
  - ListObject

## [1.19] 2020-10-6

### Added
  - Workheet#values, each_rowvalue


## [1.18] 2020-30-4

### Added
  - Workbook#worksheets, worksheets_count
  - Worksheet#each_value
  - Range#value, value=
  - Range#initialize: optional paramter worksheet

## [1.17]

### Added
  - Excel#active_workbook

### Changed
  - Excel#namevalue, set_namevalue, namevalue_glob, set_namevalue_glob are being removed

## [1.16]

### Added
   - RangeOwners#set_namevalue, set_namevalue_glob, Worksheet#set_cellval: 
     optional parameter for color 
   
### Changed   
   - Workbook#color_if_modified removed   

## [1.15]

### Added
   - Workbook#unobtrusively, Workbook#for_reading, Workbook#for_modifying

### Changed
   - Workbook.unobtrusively: removed parameter :rw_change_excel
   
## [1.14]

  - no interface change

## [1.13]

  - no interface change

## [1.12]

### Added
   - Workbook.open: option :if_unsaved => :save
   - Workbook#color_if_modified

### Changed:
   - Workbook#save, save_as: removed parameter :discoloring
   - RangeOwners#set_namevalue, set_namevalue_glob, Worksheet#set_cellval: 
     removed optional parameter for color 
   - Workbook#open: removed option :excel => :reserved_new  


## [1.11]

### Added